--- a/radcore.yml
+++ b/radcore.yml
@@ -8,8 +8,8 @@
   time_zone: 'Europe/Moscow'
 - scanner: {name: apco, type: uniden, port: 2110, speed: 57600, volume: 3, squelch: 5, collect_uids: 'on'}
   audio: {card: 'USBSOUND32', profile: mod, format: mp3}
-  icecast: {live: 'on', mp3bitrate: 32, host: amelito.com, port: 8001, pass: cHeSt57BAlKy, mount: olegso,
-           name: Test Feed, desc: Test Feed Desc, url: 'http://amelito.com', genre: scanner, public: no}
+  icecast: {live: 'on', mp3bitrate: 32, host: example.com, port: 8001, pass: xxxxxxx, mount: xxxxxx,
+           name: Test Feed, desc: Test Feed Desc, url: 'http://example.com', genre: scanner, public: no}
   templates:
    dir: '/home/ulab/public/scanner/p25/%(year)s%(mon)s%(day)s/%(group)s/%(channel)s/%(hour)s'
    wav: '%(year)s-%(mon)s-%(day)s_%(hour)sh%(min)sm%(sec)ss_%(frqtgid)s_%(system)s'
